@@ -1,29 +1,21 @@
 package tiger.bankapp.repository;
 
 import org.springframework.stereotype.Repository;
-import org.springframework.beans.factory.annotation.Autowired;
 import tiger.bankapp.model.Category;
-import tiger.bankapp.factory.CategoryFactory;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 @Repository
 public class CategoryRepository {
     private final Map<Integer, Category> storage = new HashMap<>();
     private final AtomicInteger nextId = new AtomicInteger(1);
-    private final CategoryFactory categoryFactory;
 
-    @Autowired
-    public CategoryRepository(CategoryFactory categoryFactory) {
-        this.categoryFactory = categoryFactory;
-    }
-
-    public Category save(String type, String name) {
-        int id = nextId.getAndIncrement();
-        Category category = categoryFactory.createCategory(id, type, name);
-        storage.put(id, category);
+    public Category save(Category category) {
+        if (category.getId() == null) {
+            category.setId(nextId.getAndIncrement());
+        }
+        storage.put(category.getId(), category);
         return category;
     }
 
@@ -38,7 +30,7 @@ public class CategoryRepository {
     public List<Category> findByType(String type) {
         return storage.values().stream()
                 .filter(c -> c.getType().equals(type))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public boolean deleteById(Integer id) {
@@ -49,10 +41,4 @@ public class CategoryRepository {
         storage.put(category.getId(), category);
     }
 
-    public Category saveCategory(String type, String name) {
-        int id = nextId.getAndIncrement();
-        Category category = categoryFactory.createCategory(id, type, name);  // фабрика
-        storage.put(id, category);  // сохранение
-        return category;
-    }
 }
